<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context="com.kanj.apps.swipemyass.MainActivity">

    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/text"
        android:textColor="@android:color/black"
        android:onClick="handleButtonClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
        <com.kanj.apps.swipemyass.widget.CollapsibleSectionHeader
            android:id="@+id/text_section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sectionTitle="@string/section_title"/>
        <TextView
            android:id="@+id/text_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:text="@string/section_text" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/white_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:alpha="0"/>

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        app:behavior_peekHeight="220dp"
        app:behavior_hideable="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
        <FrameLayout
            android:id="@+id/frag_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <android.support.v4.view.ViewPager
            android:id="@+id/image_carousel"
            android:layout_width="match_parent"
            android:layout_height="220dp"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
